Bug 1555340 - Check for pending mutations when Document creates PresShell. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D33378